test/Fail/Issue1346b.err
Issue1346b.agda:21.10-11: error: [UnequalTerms]
[ (d ! d) ! d ]D !=< [ e ! (e ! e) ]E
when checking that the expression x has type [ e ! (e ! e) ]E
